--- a/src/android/SolutionPage.xaml
+++ b/src/android/SolutionPage.xaml
@@ -7,31 +7,87 @@
 		<StackLayout>
 			<Label x:Name="HeaderLabel" />
 
+			<!-- Управление службой -->
+
 			<Label x:Name="ServiceSettingsLabel" />
 
 			<FlexLayout Direction="Row" Wrap="Wrap" >
 
 				<StackLayout Orientation="Horizontal">
 					<Switch x:Name="AllowStart" VerticalOptions="Center" />
-					<Label x:Name="AllowStartLabel" VerticalOptions="CenterAndExpand" />
+					<Label x:Name="AllowStartLabel" VerticalTextAlignment="Center" LineBreakMode="WordWrap" 
+						WidthRequest="200" HeightRequest="50" />
 				</StackLayout>
 
 				<StackLayout Orientation="Horizontal">
 					<Switch x:Name="AllowSound" VerticalOptions="Center" />
-					<Label x:Name="AllowSoundLabel" VerticalOptions="CenterAndExpand" />
+					<Label x:Name="AllowSoundLabel" VerticalTextAlignment="Center" LineBreakMode="WordWrap" 
+						WidthRequest="200" HeightRequest="50" />
 				</StackLayout>
 
 				<StackLayout Orientation="Horizontal">
 					<Switch x:Name="AllowLight" VerticalOptions="Center" />
-					<Label x:Name="AllowLightLabel" VerticalOptions="CenterAndExpand" />
+					<Label x:Name="AllowLightLabel" VerticalTextAlignment="Center" LineBreakMode="WordWrap" 
+						WidthRequest="200" HeightRequest="50" />
 				</StackLayout>
 
 				<StackLayout Orientation="Horizontal">
 					<Switch x:Name="AllowVibro" VerticalOptions="Center" />
-					<Label x:Name="AllowVibroLabel" VerticalOptions="CenterAndExpand" />
+					<Label x:Name="AllowVibroLabel" VerticalTextAlignment="Center" LineBreakMode="WordWrap" 
+						WidthRequest="200" HeightRequest="50" />
 				</StackLayout>
 
 			</FlexLayout>
+
+			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+				WidthRequest="200" Color="#606060" />
+
+			<!-- Управление оповещениями -->
+
+			<Label x:Name="NotificationsSettingsLabel" />
+
+			<Button x:Name="SelectedNotification" />
+
+			<StackLayout Orientation="Horizontal">
+				<Label x:Name="NameFieldLabel" VerticalOptions="Center" />
+				<Editor x:Name="NameField" VerticalOptions="Center" />
+			</StackLayout>
+
+			<StackLayout Orientation="Horizontal">
+				<Label x:Name="LinkFieldLabel" VerticalOptions="Center" />
+				<Editor x:Name="LinkField" VerticalOptions="Center" />
+			</StackLayout>
+
+			<StackLayout Orientation="Horizontal">
+				<Label x:Name="BeginningFieldLabel" VerticalOptions="Center" />
+				<Editor x:Name="BeginningField" VerticalOptions="Center" />
+
+				<Label x:Name="EndingFieldLabel" VerticalOptions="Center" />
+				<Editor x:Name="EndingField" VerticalOptions="Center" />
+			</StackLayout>
+
+			<StackLayout Orientation="Horizontal">
+				<Label x:Name="FreqFieldLabel" VerticalTextAlignment="Center" LineBreakMode="WordWrap" 
+					WidthRequest="200" HeightRequest="100" />
+				<Stepper x:Name="FreqField" VerticalOptions="Center" />
+
+				<Switch x:Name="EnabledSwitch" VerticalOptions="Center" />
+				<Label x:Name="EnabledLabel" VerticalTextAlignment="Center" />
+			</StackLayout>
+
+			<!-- Операции с оповещениями -->
+
+			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
+				WidthRequest="100" Color="#606060" />
+
+			<FlexLayout Direction="Row" Wrap="NoWrap">
+				<Button x:Name="ApplyButton" HorizontalOptions="Center" HeightRequest="75" />
+				<Button x:Name="AddButton" HorizontalOptions="Center" HeightRequest="75" />
+				<Button x:Name="DeleteButton" HorizontalOptions="Center" HeightRequest="75" />
+			</FlexLayout>
+			<Button x:Name="TemplateButton" HorizontalOptions="Center" />
+
+			<Label x:Name="Filler" />
 
 		</StackLayout>
 	</ScrollView>
