--- a/src/android/MasterPage.xaml
+++ b/src/android/MasterPage.xaml
@@ -4,6 +4,7 @@
              xmlns:mypages="clr-namespace:RD_AAOW"
              x:Class="RD_AAOW.MasterPage">
 
+	<mypages:LogPage x:Name="LogPage" />
 	<mypages:SolutionPage x:Name="SolutionPage" />
 	<mypages:AboutPage x:Name="AboutPage" />
 </CarouselPage>
