--- a/src/android/LogPage.xaml
+++ b/src/android/LogPage.xaml
@@ -12,6 +12,7 @@
 			<StackLayout Orientation="Vertical" HorizontalOptions="Start" >
 				<Button x:Name="LogNotification" HorizontalOptions="Center" />
 				<Button x:Name="GetGMJ" HorizontalOptions="Center" />
+				<Button x:Name="ShareButton" HorizontalOptions="Center" />
 			</StackLayout>
 
 			<ScrollView>
