--- a/src/android/AboutPage.xaml
+++ b/src/android/AboutPage.xaml
@@ -9,28 +9,32 @@
 
 		<ScrollView>
 			<StackLayout >
-				
+
 				<Label x:Name="AboutLabel" />
 				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
-				WidthRequest="200" Color="#606060" Margin="9" />
+					WidthRequest="200" Color="#606060" Margin="9" />
 
 				<StackLayout Orientation="Horizontal" HorizontalOptions="Center">
 					<Label x:Name="LanguageLabel" VerticalOptions="Center" />
 					<Button x:Name="LanguageSelector" />
 				</StackLayout>
 
-				<Button x:Name="ManualPage" />
+				<Button x:Name="ManualPage" HorizontalOptions="Center" />
 				<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
-				WidthRequest="200" Color="#606060" Margin="9" />
+					WidthRequest="200" Color="#606060" Margin="9" />
 
-				<Button x:Name="AppPage" />
-				<Button x:Name="ADPPage" />
-				<Button x:Name="CommunityPage" />
+				<FlexLayout JustifyContent="Center" Direction="Row" Wrap="Wrap">
+					<Button x:Name="AppPage" HorizontalOptions="Center" />
+					<Button x:Name="ADPPage" HorizontalOptions="Center" />
+					<Button x:Name="DevPage" HorizontalOptions="Center" />
+					<Button x:Name="CommunityPage" HorizontalOptions="Center" />
+				</FlexLayout>
+
 				<Label x:Name="Filler3" />
 
 			</StackLayout>
 		</ScrollView>
-		
+
 	</StackLayout>
 </ContentPage>
-    
+   
