--- a/src/android/LogPage.xaml
+++ b/src/android/LogPage.xaml
@@ -14,7 +14,7 @@
 
 				<Button x:Name="ShareButton" HorizontalOptions="Center" />
 				<StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-					<Button x:Name="ShareOffsetButton" WidthRequest="40" HeightRequest="40"/>
+					<Button x:Name="ShareOffsetButton" /><!-- WidthRequest="40" HeightRequest="40" -->
 					<Label x:Name="ShareOffsetLabel" VerticalOptions="Center" />
 				</StackLayout>
 
