--- a/src/android/SolutionPage.xaml
+++ b/src/android/SolutionPage.xaml
@@ -7,14 +7,34 @@
 		<StackLayout>
 			<Label x:Name="HeaderLabel" />
 
-			<!-- Управление службой -->
+			<!-- Настройки службы -->
 			<Label x:Name="ServiceSettingsLabel" />
 
-			<StackLayout Orientation="Horizontal">
-				<Switch x:Name="AllowStart" VerticalOptions="Center" />
-				<Label x:Name="AllowStartLabel" VerticalTextAlignment="Center" />
-			</StackLayout>
+			<FlexLayout Direction="Row" Wrap="Wrap">
 
+				<StackLayout Orientation="Horizontal">
+					<Switch x:Name="AllowStart" VerticalOptions="Center" />
+					<Label x:Name="AllowStartLabel" VerticalTextAlignment="Center" />
+				</StackLayout>
+
+				<StackLayout Orientation="Horizontal">
+					<Switch x:Name="CompleteReset" VerticalOptions="Center" />
+					<Label x:Name="CompleteResetLabel" VerticalTextAlignment="Center" />
+				</StackLayout>
+
+				<StackLayout Orientation="Horizontal">
+					<Switch x:Name="RequestOnWake" VerticalOptions="Center" />
+					<Label x:Name="RequestOnWakeLabel" VerticalTextAlignment="Center" />
+				</StackLayout>
+
+				<StackLayout Orientation="Horizontal">
+					<Switch x:Name="SpecialNotifications" VerticalOptions="Center" />
+					<Label x:Name="SpecialNotificationsLabel" VerticalTextAlignment="Center" />
+				</StackLayout>
+
+			</FlexLayout>
+
+			<!-- Настройки оповещений -->
 			<Label x:Name="AlarmSettingsLabel" />
 
 			<FlexLayout Direction="Row" Wrap="Wrap" >
@@ -39,19 +59,9 @@
 					<Label x:Name="AllowOnLockedScreenLabel" VerticalTextAlignment="Center" />
 				</StackLayout>
 
-				<StackLayout Orientation="Horizontal">
-					<Switch x:Name="CompleteReset" VerticalOptions="Center" />
-					<Label x:Name="CompleteResetLabel" VerticalTextAlignment="Center" />
-				</StackLayout>
-
-				<StackLayout Orientation="Horizontal">
-					<Switch x:Name="SpecialNotifications" VerticalOptions="Center" />
-					<Label x:Name="SpecialNotificationsLabel" VerticalTextAlignment="Center" />
-				</StackLayout>
-				
 			</FlexLayout>
 
-			<!-- Управление журналом -->
+			<!-- Настройки журнала -->
 			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
 				WidthRequest="200" Color="#606060" Margin="12" />
 
@@ -80,17 +90,19 @@
 			<Label x:Name="NotificationsSettingsLabel" />
 
 			<StackLayout Orientation="Horizontal">
-				<Button x:Name="SelectedNotification" HorizontalOptions="FillAndExpand" />
+				<Button x:Name="SelectedNotification" VerticalOptions="Center" HorizontalOptions="FillAndExpand" />
 				<Switch x:Name="EnabledSwitch" VerticalOptions="Center" HorizontalOptions="End" Rotation="270" />
-				<Button x:Name="LoadTemplateButton" HorizontalOptions="End" />
-				<Button x:Name="ShareTemplateButton" HorizontalOptions="End" />
-			</StackLayout>
 
-			<FlexLayout Direction="Row" Wrap="NoWrap" JustifyContent="Center">
-				<Button x:Name="ApplyButton" HorizontalOptions="Center" HeightRequest="55" />
-				<Button x:Name="AddButton" HorizontalOptions="Center" HeightRequest="55" />
-				<Button x:Name="DeleteButton" HorizontalOptions="Center" HeightRequest="55" />
-			</FlexLayout>
+				<Button x:Name="ApplyButton" VerticalOptions="Center" HorizontalOptions="End" />
+				<Button x:Name="ShareTemplateButton" VerticalOptions="Center" HorizontalOptions="End" />
+				<Label x:Name="Filler2" Text=" " />
+				
+				<Button x:Name="AddButton" VerticalOptions="Center" HorizontalOptions="End" />
+				<Button x:Name="DeleteButton" VerticalOptions="Center" HorizontalOptions="End" />
+				<Label x:Name="Filler3" Text=" " />
+
+				<Button x:Name="LoadTemplateButton" VerticalOptions="Center" HorizontalOptions="End" />
+			</StackLayout>
 
 			<!-- Управление отдельным оповещением -->
 			<BoxView VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="1" 
@@ -103,7 +115,6 @@
 				</StackLayout>
 
 				<StackLayout Orientation="Horizontal" Margin="3">
-					<!--<Label x:Name="LinkFieldLabel" VerticalOptions="Center" />-->
 					<Editor x:Name="LinkField" VerticalOptions="Center" />
 				</StackLayout>
 			</FlexLayout>
@@ -135,7 +146,7 @@
 				</StackLayout>
 			</FlexLayout>
 
-			<Label x:Name="Filler1"/>
+			<Label x:Name="Filler1" />
 
 		</StackLayout>
 	</ScrollView>
