--- a/src/android/LogPage.xaml
+++ b/src/android/LogPage.xaml
@@ -4,35 +4,29 @@
              x:Class="RD_AAOW.LogPage">
 
 	<StackLayout>
-
 		<Label x:Name="HeaderLabel" />
 
-		<StackLayout Orientation="Horizontal" HorizontalOptions="Fill" >
+		<Grid >
+			<Grid.RowDefinitions />
 
-			<StackLayout Orientation="Vertical" HorizontalOptions="Start" VerticalOptions="Center">
-				<StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-					<Button x:Name="ShareOffsetButton" VerticalOptions="Center" />
-					<Button x:Name="ShareButton" VerticalOptions="Center" />
-				</StackLayout>
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="100" />
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
 
-				<Label />
-
+			
+			<StackLayout Grid.Row="0" Grid.Column="0" Orientation="Vertical" HorizontalOptions="Start" VerticalOptions="Center">
 				<Button x:Name="NextNewsButton" HorizontalOptions="Center" />
 				<Button x:Name="AllNewsButton" HorizontalOptions="Center" />
-				<Button x:Name="NotificationButton" HorizontalOptions="Center" />
 
 				<Label />
 
 				<Button x:Name="GetGMJ" HorizontalOptions="Center" />
 			</StackLayout>
 
-			<ScrollView>
-				<StackLayout>
-					<Editor x:Name="MainLog" VerticalOptions="Fill" HorizontalOptions="Fill" />
-				</StackLayout>
-			</ScrollView>
+			<ListView Grid.Row="0" Grid.Column="1" x:Name="MainLog" HorizontalOptions="Fill" />
 
-		</StackLayout>
+		</Grid>
 
 	</StackLayout>
 </ContentPage>
